networking/subnets.tf
resource "aws_subnet" "public" {
  #checkov:skip=CKV_AWS_130:Assign public ip to the instances in public subnets
  count                   = length(var.subnet_azs)
  vpc_id                  = aws_vpc.this.id
  cidr_block              = cidrsubnet(var.vpc_cidr_block, 3, count.index)
  availability_zone       = var.subnet_azs[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "${local.name_prefix}-public-subnet-${count.index + 1}${substr(var.subnet_azs[count.index], -1, 1)}"
    Kind = "public"
  }
}

resource "aws_subnet" "private" {
  count                   = length(var.subnet_azs)
  vpc_id                  = aws_vpc.this.id
  cidr_block              = cidrsubnet(var.vpc_cidr_block, 3, count.index + length(var.subnet_azs))
  availability_zone       = var.subnet_azs[count.index]
  map_public_ip_on_launch = false

  tags = {
    Name = "${local.name_prefix}-private-subnet-${count.index + 1}${substr(var.subnet_azs[count.index], -1, 1)}"
    Kind = "private"
  }
}
